Fix server crash; remove experimental cart sounds